# XMRT.io

./: .env  .env.template  .gitignore  AGENT_INSTRUCTIONS.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TRIGGER.md  Dockerfile  EDGE_FUNCTIONS_README.md  ENHANCEMENT_SUMMARY.md  ENHANCEMENT_UPDATE.md  PRODUCTIVE_TASKS_CONFIG.json  README.md  README_SETUP.md  REAL_ECOSYSTEM_SETUP.md  RENDER_DEPLOYMENT.md  STOP_COMMAND.md  api_requirements.txt  app.py  autonomous_system_launcher.py  chat.html  config.json  docker-compose.dev.yml  docker-compose.yml  edge_function_client.py  eliza_advanced_integration.py  eliza_api.py  eliza_config.json  eliza_growth_system.py  eliza_learning.py  enhanced_gemini_integration.py  gemini_integration.py  github_integration.py  gunicorn.conf.py  index.html  knowledge_bridge.py  mcp_endpoints.py  (+22 more)
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: ci.yml  quality.yml  security.yml
.streamlit/: secrets.toml.template
api/: index.py
config/: real_ecosystem_config.py
logs/: cycle-00000.md
monitoring/: alert_rules.yml  prometheus.yml
server/services/: ai-service.ts  circular-feedback-system.ts  github-integration-service.ts  xmrt-coordination-service.ts
utils/: logger.py
xmrtnet/: __init__.py
xmrtnet/core/: eliza_core.py  requirements.txt
xmrtnet/utils/: eliza_logger.py
