[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmrt-io"
version = "0.1.0"
description = "Web platform and API services for the XMRT ecosystem"
authors = [{name = "XMRT Team", email = "dev@xmrt.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*", "server*", "xmrtnet*", "monitoring*"]
exclude = ["logs*", "static*", "tests*", "*.tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
